ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique
  namespace: online-boutique
  annotations:
    external-dns.alpha.kubernetes.io/hostname: online-boutique.local
spec:
  ingressClassName: nginx
  rules:
    - host: online-boutique.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
